<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthActivity">

    <TextView
        android:id="@+id/helthIndicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="76dp"
        android:background="#65ABE3"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/healthIndicators"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/weighField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weighField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/stepsField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helthIndicator"
        android:autofillHints="" />

    <EditText
        android:id="@+id/stepsField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="411dp"
        android:ems="10"
        android:hint="@string/numberOfSteps"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weighField"
        android:autofillHints="" />

    <Button
        android:id="@+id/healthBtn"
        android:layout_width="157dp"
        android:layout_height="69dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="88dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsField" />
</androidx.constraintlayout.widget.ConstraintLayout>